# find_circ3

./: .gitignore  CHANGELOG.md  LICENSE  README.md  find_circ3_benchmarks_README.md  pyproject.toml
src/find_circ3/: anchors.py  breakpoints.py  cli.py  engine.py  hit_accumulator.py  legacy_engine.py  types.py
tests/: test_anchors_cli.py  test_breakpoints.py  test_integration_bam_anchors_call.py
tests/data/: ref
tests/test_against_legacy/: test_regression.py
tests/test_against_legacy/data/: CDR1as_locus.fa.fai  cdr1as_anchors.sam  legacy_anchors.fastq  legacy_splice_sites.bed  tiny.sam  tiny_expected.bed  tiny_genome.fa
tests/test_data/ERR2139486_chr21/: ERR2139486_splice_sites.bed  ERR2139486_splice_sites_diff.txt  ERR2139486_splice_sites_legacy.bed  ERR2139486_spliced_reads_legacy.fa  ERR2139486_stats_legacy.txt
